# sgqr-generator

./: .gitignore  LICENSE  README.md  example.py  pyproject.toml  test.py
sgqrgen/: __init__.py  sgqrgen.py
