[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sgqrgen"
version = "0.1.2"
description = "A Python library to parse, modify, and generate SGQR (Singapore Quick Response) codes."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Jake Lim", email = "jiahao89sg@gmail.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["segno>=1.6.6"]
[dependency-groups]
dev = ["pytest"]
[project.urls]
Homepage = "https://github.com/jakelim/sgqrgen"
